e2e/install/gitea-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-lb-service-local
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: gitea
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
