e2e/install/gitea-svc-tls.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitea
  name: gitea-https
  namespace: gitea
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 4000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: gitea
